mlir/parsers/qiskit/antlr/generated/qiskitParser.cpp

// Generated from qiskit.g4 by ANTLR 4.9.2


#include "qiskitListener.h"
#include "qiskitVisitor.h"

#include "qiskitParser.h"


using namespace antlrcpp;
using namespace qiskit;
using namespace antlr4;

qiskitParser::qiskitParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

qiskitParser::~qiskitParser() {
  delete _interpreter;
}

std::string qiskitParser::getGrammarFileName() const {
  return "qiskit.g4";
}

const std::vector<std::string>& qiskitParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& qiskitParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

qiskitParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qiskitParser::QuantumCircuitDeclarationContext* qiskitParser::ProgramContext::quantumCircuitDeclaration() {
  return getRuleContext<qiskitParser::QuantumCircuitDeclarationContext>(0);
}

std::vector<qiskitParser::QuantumStatementContext *> qiskitParser::ProgramContext::quantumStatement() {
  return getRuleContexts<qiskitParser::QuantumStatementContext>();
}

qiskitParser::QuantumStatementContext* qiskitParser::ProgramContext::quantumStatement(size_t i) {
  return getRuleContext<qiskitParser::QuantumStatementContext>(i);
}

std::vector<qiskitParser::MeasurementStatementContext *> qiskitParser::ProgramContext::measurementStatement() {
  return getRuleContexts<qiskitParser::MeasurementStatementContext>();
}

qiskitParser::MeasurementStatementContext* qiskitParser::ProgramContext::measurementStatement(size_t i) {
  return getRuleContext<qiskitParser::MeasurementStatementContext>(i);
}


size_t qiskitParser::ProgramContext::getRuleIndex() const {
  return qiskitParser::RuleProgram;
}

void qiskitParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void qiskitParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any qiskitParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::ProgramContext* qiskitParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, qiskitParser::RuleProgram);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(46);
    quantumCircuitDeclaration();
    setState(51);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == qiskitParser::Identifier) {
      setState(49);
      _errHandler->sync(this);
      switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx)) {
      case 1: {
        setState(47);
        quantumStatement();
        break;
      }

      case 2: {
        setState(48);
        measurementStatement();
        break;
      }

      default:
        break;
      }
      setState(53);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumCircuitDeclarationContext ------------------------------------------------------------------

qiskitParser::QuantumCircuitDeclarationContext::QuantumCircuitDeclarationContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qiskitParser::CircuitNameContext* qiskitParser::QuantumCircuitDeclarationContext::circuitName() {
  return getRuleContext<qiskitParser::CircuitNameContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumCircuitDeclarationContext::EQUALS() {
  return getToken(qiskitParser::EQUALS, 0);
}

tree::TerminalNode* qiskitParser::QuantumCircuitDeclarationContext::LPAREN() {
  return getToken(qiskitParser::LPAREN, 0);
}

qiskitParser::QuantumCountContext* qiskitParser::QuantumCircuitDeclarationContext::quantumCount() {
  return getRuleContext<qiskitParser::QuantumCountContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumCircuitDeclarationContext::RPAREN() {
  return getToken(qiskitParser::RPAREN, 0);
}

tree::TerminalNode* qiskitParser::QuantumCircuitDeclarationContext::SEMICOLON() {
  return getToken(qiskitParser::SEMICOLON, 0);
}

tree::TerminalNode* qiskitParser::QuantumCircuitDeclarationContext::COMMA() {
  return getToken(qiskitParser::COMMA, 0);
}

qiskitParser::ClassicalCountContext* qiskitParser::QuantumCircuitDeclarationContext::classicalCount() {
  return getRuleContext<qiskitParser::ClassicalCountContext>(0);
}


size_t qiskitParser::QuantumCircuitDeclarationContext::getRuleIndex() const {
  return qiskitParser::RuleQuantumCircuitDeclaration;
}

void qiskitParser::QuantumCircuitDeclarationContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumCircuitDeclaration(this);
}

void qiskitParser::QuantumCircuitDeclarationContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumCircuitDeclaration(this);
}


antlrcpp::Any qiskitParser::QuantumCircuitDeclarationContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitQuantumCircuitDeclaration(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::QuantumCircuitDeclarationContext* qiskitParser::quantumCircuitDeclaration() {
  QuantumCircuitDeclarationContext *_localctx = _tracker.createInstance<QuantumCircuitDeclarationContext>(_ctx, getState());
  enterRule(_localctx, 2, qiskitParser::RuleQuantumCircuitDeclaration);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(54);
    circuitName();
    setState(55);
    match(qiskitParser::EQUALS);
    setState(56);
    match(qiskitParser::T__0);
    setState(57);
    match(qiskitParser::LPAREN);
    setState(58);
    quantumCount();
    setState(61);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == qiskitParser::COMMA) {
      setState(59);
      match(qiskitParser::COMMA);
      setState(60);
      classicalCount();
    }
    setState(63);
    match(qiskitParser::RPAREN);
    setState(64);
    match(qiskitParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CircuitNameContext ------------------------------------------------------------------

qiskitParser::CircuitNameContext::CircuitNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qiskitParser::CircuitNameContext::Identifier() {
  return getToken(qiskitParser::Identifier, 0);
}


size_t qiskitParser::CircuitNameContext::getRuleIndex() const {
  return qiskitParser::RuleCircuitName;
}

void qiskitParser::CircuitNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCircuitName(this);
}

void qiskitParser::CircuitNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCircuitName(this);
}


antlrcpp::Any qiskitParser::CircuitNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitCircuitName(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::CircuitNameContext* qiskitParser::circuitName() {
  CircuitNameContext *_localctx = _tracker.createInstance<CircuitNameContext>(_ctx, getState());
  enterRule(_localctx, 4, qiskitParser::RuleCircuitName);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(66);
    match(qiskitParser::Identifier);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumStatementContext ------------------------------------------------------------------

qiskitParser::QuantumStatementContext::QuantumStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qiskitParser::QuantumGateCallContext* qiskitParser::QuantumStatementContext::quantumGateCall() {
  return getRuleContext<qiskitParser::QuantumGateCallContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumStatementContext::SEMICOLON() {
  return getToken(qiskitParser::SEMICOLON, 0);
}

qiskitParser::QuantumBarrierContext* qiskitParser::QuantumStatementContext::quantumBarrier() {
  return getRuleContext<qiskitParser::QuantumBarrierContext>(0);
}


size_t qiskitParser::QuantumStatementContext::getRuleIndex() const {
  return qiskitParser::RuleQuantumStatement;
}

void qiskitParser::QuantumStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumStatement(this);
}

void qiskitParser::QuantumStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumStatement(this);
}


antlrcpp::Any qiskitParser::QuantumStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitQuantumStatement(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::QuantumStatementContext* qiskitParser::quantumStatement() {
  QuantumStatementContext *_localctx = _tracker.createInstance<QuantumStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, qiskitParser::RuleQuantumStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(74);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 3, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(68);
      quantumGateCall();
      setState(69);
      match(qiskitParser::SEMICOLON);
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(71);
      quantumBarrier();
      setState(72);
      match(qiskitParser::SEMICOLON);
      break;
    }

    default:
      break;
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- MeasurementStatementContext ------------------------------------------------------------------

qiskitParser::MeasurementStatementContext::MeasurementStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qiskitParser::QuantumMeasurementContext* qiskitParser::MeasurementStatementContext::quantumMeasurement() {
  return getRuleContext<qiskitParser::QuantumMeasurementContext>(0);
}

tree::TerminalNode* qiskitParser::MeasurementStatementContext::SEMICOLON() {
  return getToken(qiskitParser::SEMICOLON, 0);
}


size_t qiskitParser::MeasurementStatementContext::getRuleIndex() const {
  return qiskitParser::RuleMeasurementStatement;
}

void qiskitParser::MeasurementStatementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterMeasurementStatement(this);
}

void qiskitParser::MeasurementStatementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitMeasurementStatement(this);
}


antlrcpp::Any qiskitParser::MeasurementStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitMeasurementStatement(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::MeasurementStatementContext* qiskitParser::measurementStatement() {
  MeasurementStatementContext *_localctx = _tracker.createInstance<MeasurementStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, qiskitParser::RuleMeasurementStatement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(76);
    quantumMeasurement();
    setState(77);
    match(qiskitParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumGateCallContext ------------------------------------------------------------------

qiskitParser::QuantumGateCallContext::QuantumGateCallContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qiskitParser::CircuitNameContext* qiskitParser::QuantumGateCallContext::circuitName() {
  return getRuleContext<qiskitParser::CircuitNameContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumGateCallContext::DOT() {
  return getToken(qiskitParser::DOT, 0);
}

qiskitParser::QuantumGateNameContext* qiskitParser::QuantumGateCallContext::quantumGateName() {
  return getRuleContext<qiskitParser::QuantumGateNameContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumGateCallContext::LPAREN() {
  return getToken(qiskitParser::LPAREN, 0);
}

tree::TerminalNode* qiskitParser::QuantumGateCallContext::RPAREN() {
  return getToken(qiskitParser::RPAREN, 0);
}

tree::TerminalNode* qiskitParser::QuantumGateCallContext::SEMICOLON() {
  return getToken(qiskitParser::SEMICOLON, 0);
}

qiskitParser::GateArgumentListContext* qiskitParser::QuantumGateCallContext::gateArgumentList() {
  return getRuleContext<qiskitParser::GateArgumentListContext>(0);
}


size_t qiskitParser::QuantumGateCallContext::getRuleIndex() const {
  return qiskitParser::RuleQuantumGateCall;
}

void qiskitParser::QuantumGateCallContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumGateCall(this);
}

void qiskitParser::QuantumGateCallContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumGateCall(this);
}


antlrcpp::Any qiskitParser::QuantumGateCallContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitQuantumGateCall(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::QuantumGateCallContext* qiskitParser::quantumGateCall() {
  QuantumGateCallContext *_localctx = _tracker.createInstance<QuantumGateCallContext>(_ctx, getState());
  enterRule(_localctx, 10, qiskitParser::RuleQuantumGateCall);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(79);
    circuitName();
    setState(80);
    match(qiskitParser::DOT);
    setState(81);
    quantumGateName();
    setState(82);
    match(qiskitParser::LPAREN);
    setState(84);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << qiskitParser::LBRACKET)
      | (1ULL << qiskitParser::MINUS)
      | (1ULL << qiskitParser::Integer)
      | (1ULL << qiskitParser::Constant)
      | (1ULL << qiskitParser::RealNumber)
      | (1ULL << qiskitParser::StringLiteral)
      | (1ULL << qiskitParser::Identifier))) != 0)) {
      setState(83);
      gateArgumentList();
    }
    setState(86);
    match(qiskitParser::RPAREN);
    setState(87);
    match(qiskitParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumGateNameContext ------------------------------------------------------------------

qiskitParser::QuantumGateNameContext::QuantumGateNameContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* qiskitParser::QuantumGateNameContext::Identifier() {
  return getToken(qiskitParser::Identifier, 0);
}


size_t qiskitParser::QuantumGateNameContext::getRuleIndex() const {
  return qiskitParser::RuleQuantumGateName;
}

void qiskitParser::QuantumGateNameContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumGateName(this);
}

void qiskitParser::QuantumGateNameContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumGateName(this);
}


antlrcpp::Any qiskitParser::QuantumGateNameContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitQuantumGateName(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::QuantumGateNameContext* qiskitParser::quantumGateName() {
  QuantumGateNameContext *_localctx = _tracker.createInstance<QuantumGateNameContext>(_ctx, getState());
  enterRule(_localctx, 12, qiskitParser::RuleQuantumGateName);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(89);
    _la = _input->LA(1);
    if (!((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << qiskitParser::T__1)
      | (1ULL << qiskitParser::T__2)
      | (1ULL << qiskitParser::T__3)
      | (1ULL << qiskitParser::T__4)
      | (1ULL << qiskitParser::T__5)
      | (1ULL << qiskitParser::T__6)
      | (1ULL << qiskitParser::T__7)
      | (1ULL << qiskitParser::T__8)
      | (1ULL << qiskitParser::Identifier))) != 0))) {
    _errHandler->recoverInline(this);
    }
    else {
      _errHandler->reportMatch(this);
      consume();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumMeasurementContext ------------------------------------------------------------------

qiskitParser::QuantumMeasurementContext::QuantumMeasurementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qiskitParser::CircuitNameContext* qiskitParser::QuantumMeasurementContext::circuitName() {
  return getRuleContext<qiskitParser::CircuitNameContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumMeasurementContext::DOT() {
  return getToken(qiskitParser::DOT, 0);
}

tree::TerminalNode* qiskitParser::QuantumMeasurementContext::LPAREN() {
  return getToken(qiskitParser::LPAREN, 0);
}

qiskitParser::MeasurementArgumentListContext* qiskitParser::QuantumMeasurementContext::measurementArgumentList() {
  return getRuleContext<qiskitParser::MeasurementArgumentListContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumMeasurementContext::RPAREN() {
  return getToken(qiskitParser::RPAREN, 0);
}

tree::TerminalNode* qiskitParser::QuantumMeasurementContext::SEMICOLON() {
  return getToken(qiskitParser::SEMICOLON, 0);
}


size_t qiskitParser::QuantumMeasurementContext::getRuleIndex() const {
  return qiskitParser::RuleQuantumMeasurement;
}

void qiskitParser::QuantumMeasurementContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumMeasurement(this);
}

void qiskitParser::QuantumMeasurementContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumMeasurement(this);
}


antlrcpp::Any qiskitParser::QuantumMeasurementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitQuantumMeasurement(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::QuantumMeasurementContext* qiskitParser::quantumMeasurement() {
  QuantumMeasurementContext *_localctx = _tracker.createInstance<QuantumMeasurementContext>(_ctx, getState());
  enterRule(_localctx, 14, qiskitParser::RuleQuantumMeasurement);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(91);
    circuitName();
    setState(92);
    match(qiskitParser::DOT);
    setState(93);
    match(qiskitParser::T__9);
    setState(94);
    match(qiskitParser::LPAREN);
    setState(95);
    measurementArgumentList();
    setState(96);
    match(qiskitParser::RPAREN);
    setState(97);
    match(qiskitParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- QuantumBarrierContext ------------------------------------------------------------------

qiskitParser::QuantumBarrierContext::QuantumBarrierContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

qiskitParser::CircuitNameContext* qiskitParser::QuantumBarrierContext::circuitName() {
  return getRuleContext<qiskitParser::CircuitNameContext>(0);
}

tree::TerminalNode* qiskitParser::QuantumBarrierContext::DOT() {
  return getToken(qiskitParser::DOT, 0);
}

tree::TerminalNode* qiskitParser::QuantumBarrierContext::LPAREN() {
  return getToken(qiskitParser::LPAREN, 0);
}

tree::TerminalNode* qiskitParser::QuantumBarrierContext::RPAREN() {
  return getToken(qiskitParser::RPAREN, 0);
}

tree::TerminalNode* qiskitParser::QuantumBarrierContext::SEMICOLON() {
  return getToken(qiskitParser::SEMICOLON, 0);
}

qiskitParser::GateArgumentListContext* qiskitParser::QuantumBarrierContext::gateArgumentList() {
  return getRuleContext<qiskitParser::GateArgumentListContext>(0);
}


size_t qiskitParser::QuantumBarrierContext::getRuleIndex() const {
  return qiskitParser::RuleQuantumBarrier;
}

void qiskitParser::QuantumBarrierContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterQuantumBarrier(this);
}

void qiskitParser::QuantumBarrierContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitQuantumBarrier(this);
}


antlrcpp::Any qiskitParser::QuantumBarrierContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitQuantumBarrier(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::QuantumBarrierContext* qiskitParser::quantumBarrier() {
  QuantumBarrierContext *_localctx = _tracker.createInstance<QuantumBarrierContext>(_ctx, getState());
  enterRule(_localctx, 16, qiskitParser::RuleQuantumBarrier);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(99);
    circuitName();
    setState(100);
    match(qiskitParser::DOT);
    setState(101);
    match(qiskitParser::T__10);
    setState(102);
    match(qiskitParser::LPAREN);
    setState(104);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if ((((_la & ~ 0x3fULL) == 0) &&
      ((1ULL << _la) & ((1ULL << qiskitParser::LBRACKET)
      | (1ULL << qiskitParser::MINUS)
      | (1ULL << qiskitParser::Integer)
      | (1ULL << qiskitParser::Constant)
      | (1ULL << qiskitParser::RealNumber)
      | (1ULL << qiskitParser::StringLiteral)
      | (1ULL << qiskitParser::Identifier))) != 0)) {
      setState(103);
      gateArgumentList();
    }
    setState(106);
    match(qiskitParser::RPAREN);
    setState(107);
    match(qiskitParser::SEMICOLON);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- GateArgumentListContext ------------------------------------------------------------------

qiskitParser::GateArgumentListContext::GateArgumentListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<qiskitParser::ExpressionContext *> qiskitParser::GateArgumentListContext::expression() {
  return getRuleContexts<qiskitParser::ExpressionContext>();
}

qiskitParser::ExpressionContext* qiskitParser::GateArgumentListContext::expression(size_t i) {
  return getRuleContext<qiskitParser::ExpressionContext>(i);
}

std::vector<tree::TerminalNode *> qiskitParser::GateArgumentListContext::COMMA() {
  return getTokens(qiskitParser::COMMA);
}

tree::TerminalNode* qiskitParser::GateArgumentListContext::COMMA(size_t i) {
  return getToken(qiskitParser::COMMA, i);
}


size_t qiskitParser::GateArgumentListContext::getRuleIndex() const {
  return qiskitParser::RuleGateArgumentList;
}

void qiskitParser::GateArgumentListContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterGateArgumentList(this);
}

void qiskitParser::GateArgumentListContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<qiskitListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitGateArgumentList(this);
}


antlrcpp::Any qiskitParser::GateArgumentListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<qiskitVisitor*>(visitor))
    return parserVisitor->visitGateArgumentList(this);
  else
    return visitor->visitChildren(this);
}

qiskitParser::GateArgumentListContext* qiskitParser::gateArgumentList() {
  GateArgumentListContext *_localctx = _tracker.createInstance<GateArgumentListContext>(_ctx, getState());
  enterRule(_localctx, 18, qiskitParser::RuleGateArgumentList);
